--- a/RestuApp/app/src/main/res/layout/fragment_dish_item.xml
+++ b/RestuApp/app/src/main/res/layout/fragment_dish_item.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+       android:layout_height="wrap_content"
     tools:context=".DishItemFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="389dp"
-        android:layout_height="42dp">
+        android:layout_width="match_parent"
+        android:layout_height="46dp">
 
         <TextView
             android:id="@+id/dishPriceFragment"
